Sending Email completed for Patient Reports

--- a/src/main/webapp/requests/report.xhtml
+++ b/src/main/webapp/requests/report.xhtml
@@ -11,6 +11,7 @@
 
     <f:metadata >
         <f:viewParam name="id" value="#{patientReportController.encryptedPatientReportId}" ></f:viewParam>
+        <f:viewParam name="user" value="#{patientReportController.encryptedExpiary}" ></f:viewParam>
         <f:viewAction action="#{patientReportController.preparePatientReportByIdForRequests()}" ></f:viewAction>
     </f:metadata>
     <head>
