Sending Email completed for Patient Reports

--- a/src/main/webapp/lab/investigation.xhtml
+++ b/src/main/webapp/lab/investigation.xhtml
@@ -142,8 +142,11 @@
                                                         <f:selectItem itemLabel="Please select a Machine"/>
                                                         <f:selectItems value="#{machineController.items}" var="m" itemLabel="#{m.name}" itemValue="#{m}" />
                                                     </p:selectOneMenu>
-
-
+                                                    <h:outputText value="Priority" ></h:outputText>
+                                                    <p:selectOneMenu value="#{investigationController.current.priority}"    >
+                                                        <f:selectItem itemLabel="Not Set" ></f:selectItem>
+                                                        <f:selectItems value="#{enumController.priorities}" ></f:selectItems>
+                                                    </p:selectOneMenu>
                                                     <p:outputLabel value="Report Format"/>
                                                     <p:selectOneMenu value="#{investigationController.current.reportType}" >                               
                                                         <f:selectItem itemLabel="General" itemValue="General"/>
