--- a/src/main/webapp/reportLab/report_lab_by_refering_doctor_summery.xhtml
+++ b/src/main/webapp/reportLab/report_lab_by_refering_doctor_summery.xhtml
@@ -108,7 +108,7 @@
                                 </h:outputLabel>
                             </f:facet>-->
                         </p:column>
-                        <p:column styleClass="numberCol" >
+                        <p:column styleClass="numberCol"  sortBy="#{d.total}">
                             <f:facet name="header">
                                 <h:outputLabel value="Net Value"/>
                             </f:facet>
