--- a/src/main/webapp/lab/institution.xhtml
+++ b/src/main/webapp/lab/institution.xhtml
@@ -145,13 +145,13 @@
                                                 <p:inputText autocomplete="off" id="txtEmPs" value="#{institutionController.current.emailSendingPassword}"  ></p:inputText>
 
                                                 <h:outputText  value="SMS Sending Username" ></h:outputText>
-                                                <p:inputText autocomplete="off" id="txtEmUn" value="#{institutionController.current.smsSendingUsername}"  ></p:inputText>
+                                                <p:inputText autocomplete="off" id="txtSmsUn" value="#{institutionController.current.smsSendingUsername}"  ></p:inputText>
 
                                                 <h:outputText  value="SMS Sending Password" ></h:outputText>
-                                                <p:inputText autocomplete="off" id="txtEmPs" value="#{institutionController.current.smsSendingPassword}"  ></p:inputText>
+                                                <p:inputText autocomplete="off" id="txtSmsPs" value="#{institutionController.current.smsSendingPassword}"  ></p:inputText>
 
                                                 <h:outputText  value="SMS Alias" ></h:outputText>
-                                                <p:inputText autocomplete="off" id="txtEmUn" value="#{institutionController.current.smsSendingAlias}"  ></p:inputText>
+                                                <p:inputText autocomplete="off" id="txtSmsAlias" value="#{institutionController.current.smsSendingAlias}"  ></p:inputText>
 
 
                                             </h:panelGrid>
