--- a/src/main/webapp/collecting_centre/bill.xhtml
+++ b/src/main/webapp/collecting_centre/bill.xhtml
@@ -74,7 +74,7 @@
                                                         <td  >
                                                             <p:inputText autocomplete="off"  id="txtNewPtName" placeholder="Name"
                                                                          value="#{collectingCentreBillController.newPatient.person.name}" 
-                                                                         style="width: 350px;text-transform:uppercase;">
+                                                                         style="width: 350px;text-transform:capitalize;">
                                                             </p:inputText>
                                                         </td>
                                                     </tr>
