--- a/src/main/webapp/hr/hr_staff_paysheet_component_all.xhtml
+++ b/src/main/webapp/hr/hr_staff_paysheet_component_all.xhtml
@@ -92,7 +92,7 @@
 
                 <p:panel id="lst">
                     <f:facet name="header">      
-                        <h:outputLabel value="#{staffPaySheetComponentAllController.paysheetComponent.name}" style="text-transform:uppercase;" />
+                        <h:outputLabel value="#{staffPaySheetComponentAllController.paysheetComponent.name}" style="text-transform:capitalize;" />
                         <p:commandButton ajax="false" value="Remove Selected" action="#{staffPaySheetComponentAllController.removeAll}" style="float: right;" onclick="onSubmitButton();"/>
                     </f:facet>
                     <h:panelGrid columns="2" >
