--- a/src/main/webapp/hr/hr_staff_paysheet_component_all_performace_allovance_percentatge.xhtml
+++ b/src/main/webapp/hr/hr_staff_paysheet_component_all_performace_allovance_percentatge.xhtml
@@ -99,7 +99,7 @@
 
                 <p:panel id="lst" >
                     <f:facet name="header"  >      
-                        <h:outputLabel value="#{staffPaySheetComponentAllPerformancePercentageController.paysheetComponent.name}" style="text-transform:uppercase;" />
+                        <h:outputLabel value="#{staffPaySheetComponentAllPerformancePercentageController.paysheetComponent.name}" style="text-transform:capitalize;" />
                         <p:commandButton ajax="false" value="Remove Selected" action="#{staffPaySheetComponentAllPerformancePercentageController.removeAll}" style="float: right;" onclick="onSubmitButton();"/>
 
                     </f:facet>
