--- a/src/main/webapp/hr/hr_staff_paysheet_component_all_performance_allovance.xhtml
+++ b/src/main/webapp/hr/hr_staff_paysheet_component_all_performance_allovance.xhtml
@@ -109,7 +109,7 @@
 
                 <p:panel id="lst">
                     <f:facet name="header">      
-                        <h:outputLabel value="#{staffPaySheetComponentAllPerformanceAllowanceController.paysheetComponent.name}" style="text-transform:uppercase;" />
+                        <h:outputLabel value="#{staffPaySheetComponentAllPerformanceAllowanceController.paysheetComponent.name}" style="text-transform:capitalize;" />
                         <p:commandButton ajax="false" value="Remove Selected" action="#{staffPaySheetComponentAllPerformanceAllowanceController.removeAll}" style="float: right;" onclick="onSubmitButton();"/>
 
                     </f:facet>
