--- a/src/main/webapp/hr/hr_staff_paysheet_component_individual.xhtml
+++ b/src/main/webapp/hr/hr_staff_paysheet_component_individual.xhtml
@@ -54,7 +54,7 @@
                 <p:spacer height="30" />
                 <p:panel >
                     <f:facet name="header" >   
-                        <h:outputLabel value="Paysheet Component individual" style="text-transform:uppercase;" />
+                        <h:outputLabel value="Paysheet Component individual" style="text-transform:capitalize;" />
 
                     </f:facet>
                     <h:panelGrid columns="2" >
