--- a/src/main/webapp/opd_bill.xhtml
+++ b/src/main/webapp/opd_bill.xhtml
@@ -105,7 +105,7 @@
 
                                                     <p:inputText autocomplete="off"  id="txtNewPtName" placeholder="Enter the Name of the patient"
                                                                  value="#{billController.newPatient.person.name}" 
-                                                                 style="min-width: 350px;text-transform:uppercase;">
+                                                                 style="min-width: 350px;text-transform:capitalize;">
                                                     </p:inputText>
 
                                                     <p:selectOneMenu id="txtNewSex"  value="#{billController.newPatient.person.sex}" style="width: 100px;">
