--- a/src/main/webapp/opd_bill_package_medical.xhtml
+++ b/src/main/webapp/opd_bill_package_medical.xhtml
@@ -336,7 +336,7 @@
                                                             </h:outputLabel>
 
                                                             <h:outputLabel value="#{bill.patient.person.nameWithTitle}"
-                                                                           style="position:absolute;left:4.5cm; top:2.0cm; text-transform: uppercase; "  >
+                                                                           style="position:absolute;left:4.5cm; top:2.0cm; text-transform: capitalize; "  >
                                                             </h:outputLabel>
 
                                                             <h:outputLabel value="#{bill.patient.person.phone}"
