--- a/src/main/webapp/petty_cash_bill.xhtml
+++ b/src/main/webapp/petty_cash_bill.xhtml
@@ -98,7 +98,7 @@
                                         <f:selectItems value="#{pettyCashBillController.title}"/>
                                     </p:selectOneMenu>
                                     <p:outputLabel value="Name"/>
-                                    <p:inputText autocomplete="off"  id="txtNewPtName" value="#{pettyCashBillController.newPerson.name}" style="width: 200px;text-transform:uppercase;">
+                                    <p:inputText autocomplete="off"  id="txtNewPtName" value="#{pettyCashBillController.newPerson.name}" style="width: 200px;text-transform:capitalize;">
                                     </p:inputText>
                                     <p:outputLabel value="Sex"/>
                                     <p:selectOneMenu id="txtNewSex"  value="#{pettyCashBillController.newPerson.sex}" style="width: 200px;">
