--- a/src/main/webapp/resources/patient/inputPatientDetail_1.xhtml
+++ b/src/main/webapp/resources/patient/inputPatientDetail_1.xhtml
@@ -25,7 +25,7 @@
                          autocomplete="off" 
                          id="txtNewPtName"
                          value="#{cc.attrs.patient.person.name}" 
-                         style="width:300px;text-transform:uppercase;">
+                         style="width:300px;text-transform:capitalize;">
             </p:inputText>
             <!--            <p:outputLabel value="NIC"/>-->
             <p:inputMask mask="999999999V" id="nic" 
