--- a/src/main/webapp/channel/channel_booking_modified.xhtml
+++ b/src/main/webapp/channel/channel_booking_modified.xhtml
@@ -221,7 +221,7 @@
                                     <f:selectItems value="#{billController.title}"/>
                                 </p:selectOneMenu>
                                 <h:outputLabel value="Name"/>
-                                <p:inputText autocomplete="off"  id="txtNewPtName" value="#{channelBillController.newPatient.person.name}" style="width: 200px;text-transform:uppercase;">
+                                <p:inputText autocomplete="off"  id="txtNewPtName" value="#{channelBillController.newPatient.person.name}" style="width: 200px;text-transform:capitalize;">
                                 </p:inputText>
 
                                 <h:outputLabel value="Phone"/>
