--- a/src/main/webapp/hr/_hr_staff_loan_installment_all.xhtml
+++ b/src/main/webapp/hr/_hr_staff_loan_installment_all.xhtml
@@ -90,7 +90,7 @@
 
                 <p:panel id="lst">
                     <f:facet name="header">      
-                        <h:outputLabel value="#{staffPaySheetComponentAllController.paysheetComponent.name}" style="text-transform:uppercase;" />
+                        <h:outputLabel value="#{staffPaySheetComponentAllController.paysheetComponent.name}" style="text-transform:capitalize;" />
                         <p:commandButton ajax="false" value="Remove Selected" action="#{staffPaySheetComponentAllController.removeAll}" style="float: right;" onclick="onSubmitButton();"/>
                         <p:commandButton ajax="false" value="Fill" action="#{staffPaySheetComponentAllController.createStaffPaysheetComponent}" />
                     </f:facet>
