--- a/src/main/webapp/opd_pre_bill.xhtml
+++ b/src/main/webapp/opd_pre_bill.xhtml
@@ -109,7 +109,7 @@
                                                         <td  >
                                                             <p:inputText autocomplete="off"  id="txtNewPtName" 
                                                                          value="#{opdPreBillController.newPatient.person.name}" 
-                                                                         style="width: 350px;text-transform:uppercase;">
+                                                                         style="width: 350px;text-transform:capitalize;">
                                                             </p:inputText>
                                                         </td>
                                                     </tr>
