--- a/src/main/webapp/resources/bill/newPatient.xhtml
+++ b/src/main/webapp/resources/bill/newPatient.xhtml
@@ -20,7 +20,7 @@
                 <f:selectItems value="#{cc.attrs.controller.title}"/>
             </p:selectOneMenu>
             <h:outputLabel value="Name"/>
-            <p:inputText autocomplete="off"  id="txtNewPtName" value="#{cc.attrs.controller.newPatient.person.name}" style="width: 200px;text-transform:uppercase;">
+            <p:inputText autocomplete="off"  id="txtNewPtName" value="#{cc.attrs.controller.newPatient.person.name}" style="width: 200px;text-transform:capitalize;">
             </p:inputText>
             <h:outputLabel value="Sex"/>
             <p:selectOneMenu id="txtNewSex"  value="#{cc.attrs.controller.newPatient.person.sex}" style="width: 200px;">
