--- a/src/main/webapp/resources/bill/opdPackegeFiveFiveBill.xhtml
+++ b/src/main/webapp/resources/bill/opdPackegeFiveFiveBill.xhtml
@@ -37,7 +37,7 @@
                 </h:outputLabel>
 
                 <h:outputLabel value="#{cc.attrs.bill.patient.person.nameWithTitle}"
-                               style="position:absolute;left:4.5cm; top:2.0cm; text-transform: uppercase; "  >
+                               style="position:absolute;left:4.5cm; top:2.0cm; text-transform: capitalize; "  >
                 </h:outputLabel>
 
                 <h:outputLabel value="#{cc.attrs.bill.patient.person.phone}"
