--- a/src/main/webapp/lab/investigation.xhtml
+++ b/src/main/webapp/lab/investigation.xhtml
@@ -44,7 +44,7 @@
 
                                             <h:panelGrid id="gpSelectText" >
                                                 <p:autoComplete id="acIx" value="#{investigationController.current}" 
-                                                                completeMethod="#{investigationController.completeInvestigationsOfCurrentInstitution}"
+                                                                completeMethod="#{investigationController.completeInvestigationsOfSelectedInstitution}"
                                                                 var="ix" itemLabel="#{ix.name}" itemValue="#{ix}" 
                                                                 placeholder="Search here ..." 
                                                                 size="10" maxResults="10">
@@ -205,8 +205,10 @@
                                                                 <h:outputText value="Master Item" rendered="#{ix2.institution eq null}" ></h:outputText>
                                                                 <h:outputText value="#{ix2.institution.name}" rendered="#{ix2.institution ne null}"  ></h:outputText>
                                                             </p:column>
+                                                            <p:column >
+                                                                <h:outputText value="#{ix2.department.name}" rendered="#{ix2.department ne null}"  ></h:outputText>
+                                                            </p:column>
                                                         </p:autoComplete>
-                                                        <h:outputText value="***" style="color: red; font-weight: bold;" rendered="#{investigationController.current.reportedAs.institution ne null}" ></h:outputText>
                                                     </h:panelGroup>
 
                                                     <h:outputText value="Institution" ></h:outputText>
