--- a/src/main/webapp/resources/ezcomp/preferences.xhtml
+++ b/src/main/webapp/resources/ezcomp/preferences.xhtml
@@ -102,6 +102,9 @@
                     <h:outputLabel value="Five Five Bill With Labels and Headings"></h:outputLabel>
                     <h:selectBooleanCheckbox value="#{sessionController.currentPreference.fiveFivePaperWithHeadings}"/>
 
+                    <h:outputLabel value="Print barcode in OPD Bills"></h:outputLabel>
+                    <h:selectBooleanCheckbox value="#{sessionController.currentPreference.printBarcodeInOpdBill}"/>
+
                     <h:outputLabel value="OPD Settle Without Patient Phone Number"></h:outputLabel>
                     <h:selectBooleanCheckbox value="#{sessionController.currentPreference.opdSettleWithoutPatientPhoneNumber}"/>
 
