--- a/src/main/webapp/resources/ezcomp/preferences.xhtml
+++ b/src/main/webapp/resources/ezcomp/preferences.xhtml
@@ -105,8 +105,11 @@
                     <h:outputLabel value="Print barcode in OPD Bills"></h:outputLabel>
                     <h:selectBooleanCheckbox value="#{sessionController.currentPreference.printBarcodeInOpdBill}"/>
 
-                    <h:outputLabel value="OPD Settle Without Patient Phone Number"></h:outputLabel>
+                    <h:outputLabel value="Can Settle OPD Bills without Patient Phone Number"></h:outputLabel>
                     <h:selectBooleanCheckbox value="#{sessionController.currentPreference.opdSettleWithoutPatientPhoneNumber}"/>
+                    
+                    <h:outputLabel value="Can Settle OPD Bills without Referring Doctor"></h:outputLabel>
+                    <h:selectBooleanCheckbox value="#{sessionController.currentPreference.canSettleOpdBillWithoutReferringDoctor}"/>
 
                 </h:panelGrid>
 
