Patient Age and Month Improved.

--- a/src/main/webapp/resources/bill/five_five_paper_with_headings.xhtml
+++ b/src/main/webapp/resources/bill/five_five_paper_with_headings.xhtml
@@ -199,7 +199,7 @@
             </div>
 
 
-            <h:panelGroup  rendered="#{sessionController.institutionPreference.printBarcodeInOpdBill}" >
+            <h:panelGroup  rendered="#{sessionController.institutionPreference.printBarcodeInOpdBill or true}" >
                 <div class="billline">
                     <div style="width: 100%;text-align: center;font-size: 10px;">
                         <p:barcode value="#{cc.attrs.bill.idStr}" type="code39" cache="false" 
