Patient search in OPD bill Improved

--- a/src/main/webapp/opd_bill.xhtml
+++ b/src/main/webapp/opd_bill.xhtml
@@ -225,6 +225,9 @@
                                                     <p:column headerText="Name">
                                                         <h:outputLabel value="#{apt.person.nameWithTitle}" />
                                                     </p:column>
+                                                    <p:column headerText="Phone">
+                                                        <h:outputLabel value="#{apt.person.phone}" />
+                                                    </p:column>
 
                                                     <p:column headerText="Age">
                                                         <h:outputLabel value="#{apt.age}" />
